android/testData/gradle/Package.gradle
apply plugin: 'com.android.application'

android {
    defaultConfig {
        <error descr="Deprecated: Replace 'packageName' with 'applicationId'">packageName</error> 'my.pkg'
    }
    buildTypes {
        debug {
            <error descr="Deprecated: Replace 'packageNameSuffix' with 'applicationIdSuffix'">packageNameSuffix</error> ".debug"
        }
    }
}
